mybatis-migrations repackaged using the appassembler plugin with generated shell/cmd scripts,updated migrations user manual